--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <!-- Acquired from https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests# to address error from something called favicon.ico -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
     <title>Rochambeau</title>
 </head>
 <body>
