--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
 
     <!-- Acquired from https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests# to address error from something called favicon.ico -->
@@ -9,6 +10,12 @@
     <title>Rochambeau</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+    <div class="outcome">
+    </div>
 </body>
 </html>
