Remove unnecessary favicon code

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <script src="script.js" defer></script>
-    <meta charset="UTF-8">
-
-    <!-- Acquired from https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests# to address error from something called favicon.ico -->
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-
+    <meta charset="UTF-8" />
     <title>Rochambeau</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
     </div>
-    <div class="outcome">
-    </div>
-</body>
+    <div class="outcome"></div>
+  </body>
 </html>
